components/minio-storage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-dev
spec:
  selector:
    app: minio
  ports:
    - name: 9090-tcp
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
